# LayoutForge

./: .cursorrules  .dockerignore  .env.example  .eslintrc.json  .gitignore  00-START-HERE-FIRST.txt  ACTION_CHECKLIST.md  CHECK-NODE.bat  CHECK-NODE.txt  CLAUDE.md  DIAGNOSE.bat  Dockerfile.worker  GITHUB_PUSH_INSTRUCTIONS.md  LOCAL-DEV-STEPS.txt  MERCURY2-ONBOARDING.md  MIGRATION.md  NEXT-SESSION.md  PHASE_1_IMPLEMENTATION.md  PHASE_1_SETUP.md  PHASE_1_SUMMARY.md  PROJECT_RULES.md  README.md  RUN-LOCAL.txt  SESSION_ISSUES.md  START-HERE.bat  VERCEL_DEPLOYMENT.md  create_preview_docx.js  create_test_docx.js  next.config.ts  package-lock.json  package.json  parse_response.json  railway.toml  start-dev.bat  tailwind.config.ts  test_upload.docx  tsconfig.json  tsconfig.tsbuildinfo  upload_response.json  upload_result.json  (+1 more)
kdp-preflight-engine/: .env.example  .gitignore  DEPLOY-LIVE.md  Dockerfile  Dockerfile.live  Dockerfile.worker  HEALTH-SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
kdp-preflight-engine/app/: __init__.py  config.py  job_store.py  limiter.py  main.py  schemas.py  security.py  storage.py
kdp-preflight-engine/app/api/: annotate.py  file.py  report.py  status.py  upload.py
kdp-preflight-engine/app/core/: __init__.py  (+5 more)
kdp-preflight-engine/docs/: PIPELINE_AND_API.md
kdp-preflight-engine/examples/: sample_report.json  sample_report_trim_warning.json
kdp-preflight-engine/frontend/: .env.example  README.md  index.html  package-lock.json  package.json
kdp-preflight-engine/tests/: test_bbox_enrichment.py
(+548 files in other folders)
