[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "kdp-preflight-engine"
version = "0.1.0"
description = "Deterministic PDF validation service for Amazon KDP paperback requirements"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyMuPDF>=1.23.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "boto3>=1.34.0",
    "structlog>=24.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio", "httpx"]
